fix wrap right half bug

--- a/customtheme/sass/_wrap.scss
+++ b/customtheme/sass/_wrap.scss
@@ -11,3 +11,7 @@
     margin-top: 5px;
   } 
 }
+.dokuwiki .wrap_right.wrap_half {
+  margin-left: 0;
+  margin-right: 0;
+}
